tests/parse/fail/illegal-65.dcf
void main(int x = 3) {
}